trunk/Archive/67f6b7bb6ec1a6997ac6e05c1af3421e-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:11:1: error: expected unqualified-id before ‘.’ token
 .LC0:
 ^
